<resources>
    <string name="app_name">Technoway Machine Test</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_name_or_password">User Name Or Password Is Empty</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
</resources>